# tradefarm

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  autorun-broadcast.bat  autorun.bat  autorun.ps1  broadcast.bat  broadcast.ps1  dashboard.bat  dashboard.ps1  package-lock.json  package.json  pyproject.toml  start.bat  start.ps1
dev/: dashboard-upgrades.md  feature-backlog.md  stream-app-ideas.md
dev/_archive/: plan_tech.md
dev/design_handoff_v1_broadcast/: README.md  mock-data.jsx  preview.html  shared.jsx  v1-broadcast.jsx
docs/: PROJECT_PLAN.md  plan_product.md
scripts/: make_favicon.py
src/tradefarm/: config.py
src/tradefarm/academy/: __init__.py  curriculum.py  promotions_repo.py  ranks.py  repo.py
src/tradefarm/agents/: backtest.py  base.py  features.py  llm_overlay.py  llm_overlay_types.py  llm_providers.py  lstm_agent.py  lstm_llm_agent.py  lstm_model.py  (+3 more)
stream/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
stream/src/: App.tsx  index.css  main.tsx  settings.ts
stream/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
stream/src-tauri/capabilities/: default.json
stream/src-tauri/src/: lib.rs  main.rs
tests/: test_curriculum.py  test_journal.py  test_market_clock.py  test_ranks.py  test_retrieval.py  test_risk_exits.py  test_stream_control.py  test_virtual_book.py
tests/api/: test_recap.py
tests/orchestrator/: test_audience.py  test_auto_director.py  test_chat_commands.py  test_commentary_loop.py  test_decision_feed.py  test_predictions.py  test_streak_watcher.py  test_youtube_chat.py
web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css
(+128 files in other folders)
