[package]
name = "tradefarm-stream"
version = "0.1.0"
description = "TradeFarm broadcast app — isometric agent world for streaming"
authors = ["TradeFarm"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "tradefarm_stream_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
